--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/folio": "^1.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.4",
+        "livewire/volt": "^1.6",
+        "robsontenorio/mary": "^1.22"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
